# Cortesia

./: .gitattributes  .gitignore  .roomodes  AGENT_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_VERIFICATION_README.md  BRAIN_METRICS_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COGNITIVE_QA_COMPILATION_SUCCESS_REPORT.md  COGNITIVE_QA_INTEGRATION_COMPLETE_REPORT.md  COGNITIVE_QA_INTEGRATION_REPORT.md  COMPLETE_SYSTEM_PROOF.md  COMPREHENSIVE_FINAL_REPORT.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CRITICAL_IMPROVEMENTS_IMPLEMENTATION.md  CROSS_PLATFORM_TESTING_STRATEGY.md  Cargo.toml  Cognitive_Test_Migration_Summary.md  DASHBOARD_VERIFICATION_REPORT.md  DEPENDENCY_GRAPH_IMPLEMENTATION.md  DEPLOYMENT_AND_TROUBLESHOOTING_GUIDE.md  DISASTER_RECOVERY_PROCEDURES.md  EMBEDDING_DIMENSION_VALIDATION_REPORT.md  EMERGENCY_FIX_COMPLETION_REPORT.md  EMERGENCY_MOCK_VALIDATION.md  FINAL_INTEGRATION_REPORT.md  FINAL_SYSTEM_STATUS.md  FINAL_TEST_REPORT.md  GIT_FILE_WATCHER_DESIGN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_VERIFICATION_REPORT.md  LLMKG_IMPROVEMENT_PLAN.md  LLMKG_MCP_COMPREHENSIVE_TEST_PLAN.md  LLMKG_MCP_TEST_RESULTS.md  LLMKG_SYSTEM_ANALYSIS_REPORT.md  MCP_SERVER_INSTALLATION_GUIDE.md  MCP_SERVER_QUICK_START.md  (+176 more)
.git-rewrite/t/: .gitignore  CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  Cargo.toml  FIXES_APPLIED.md  LLM_OPTIMIZATION_SUMMARY.md  MCP_ACCESS_STATUS.md  PRODUCTION_READINESS_PROOF.md  SIMULATION_RESULTS.md  simulation_examples.md
.git-rewrite/t/.github/workflows/: integration-tests.yml  simulation-tests.yml
.git-rewrite/t/benches/: speed_benchmark.rs
.git-rewrite/t/docs/: LLMKG_IMPROVEMENT_REPORT_2025.md  PHASE_1_SIMULATION_INFRASTRUCTURE.md  PHASE_2_SYNTHETIC_DATA_GENERATION.md  PHASE_3_UNIT_TESTING_FRAMEWORK.md  PHASE_4_INTEGRATION_TESTING_FRAMEWORK.md  PHASE_5_END_TO_END_SIMULATION.md  PHASE_6_PERFORMANCE_STRESS_TESTING.md  rustwasmKGLLM.txt
.git-rewrite/t/examples/: basic_usage.rs  fastest_kg_demo.rs  fix_verification.rs  llm_friendly_demo.rs  mcp_demo.rs  performance_test.rs  working_demo.rs
.git-rewrite/t/scripts/: compare-cross-platform-results.py  federation-test-runner.sh  generate-test-report.py  integration-test-runner.sh  performance-test-runner.sh  verify-compatibility.py
.git-rewrite/t/src/: error.rs  lib.rs
.git-rewrite/t/src/agents/: coordination.rs  mod.rs
.git-rewrite/t/src/core/: entity.rs  entity_compat.rs  graph.rs  knowledge_engine.rs  memory.rs  mod.rs  types.rs
.git-rewrite/t/src/embedding/: mod.rs  quantizer.rs  simd_search.rs  similarity.rs  store.rs  store_compat.rs
.git-rewrite/t/src/extraction/: advanced_nlp.rs
.git-rewrite/t/src/federation/: coordinator.rs  merger.rs  registry.rs  router.rs
.git-rewrite/t/src/gpu/: mod.rs
.git-rewrite/t/src/math/: distributed_math.rs  graph_algorithms.rs  similarity.rs
.git-rewrite/t/src/mcp/: federated_server.rs  llm_friendly_server.rs  mod.rs
.git-rewrite/t/src/monitoring/: alerts.rs  mod.rs  observability.rs  performance.rs
.git-rewrite/t/src/neural/: canonicalization.rs  mod.rs  salience.rs  summarization.rs
.git-rewrite/t/src/query/: clustering.rs  rag.rs  summarization.rs  two_tier.rs
.git-rewrite/t/src/storage/: bloom.rs  hybrid_graph.rs  index.rs  mmap_storage.rs  mod.rs
.git-rewrite/t/src/streaming/: incremental_indexing.rs  mod.rs  update_handler.rs
.git-rewrite/t/src/validation/: feedback.rs
.git-rewrite/t/src/versioning/: mod.rs  temporal_query.rs  version_graph.rs  version_store.rs
.git-rewrite/t/src/wasm/: fast_interface.rs
.git-rewrite/t/tests/: Cargo.toml  PHASE_3_COMPLETION_SUMMARY.md  README.md  simple_test.rs
.git-rewrite/t/tests/benches/: unit_benchmarks.rs
.git-rewrite/t/tests/data_generation/: README.md  embeddings.rs  federation.rs  golden_standards.rs  graph_topologies.rs  knowledge_graphs.rs  mod.rs  multi_scale.rs  quantization_data.rs  query_patterns.rs  streaming.rs  validation.rs
.git-rewrite/t/tests/e2e/: concurrent_users_simulation.rs  content_creation_simulation.rs  data_generators.rs  failure_recovery_simulation.rs  health_monitors.rs  long_running_simulation.rs  mod.rs  performance_monitors.rs  production_environment_simulation.rs  quality_assessors.rs  research_assistant_simulation.rs  simulation_environment.rs  workflow_validators.rs
.git-rewrite/t/tests/infrastructure/: ci_integration.rs  config.rs  dashboard.rs  dashboard_template.html  data_cache.rs  data_generation.rs  data_registry.rs  deterministic_rng.rs  execution_engine.rs  isolation.rs  metrics.rs  mod.rs  performance_db.rs  performance_monitor.rs  report_writers.rs  reporting.rs  test_registry.rs  time_control.rs
.git-rewrite/t/tests/integration/: Cargo.toml  Dockerfile  embedding_graph_integration.rs  graph_storage_integration.rs  mcp_integration.rs  mod.rs  wasm_integration.rs  (+1 more)
crates/neural-bridge/: Cargo.toml
crates/neural-bridge/src/: bridge.rs  emergence.rs  lib.rs
crates/neuromorphic-core/: BUILDER_ENHANCEMENTS.md  Cargo.toml
crates/neuromorphic-core/benches/: inhibition_benchmarks.rs
crates/neuromorphic-core/src/: error.rs  lib.rs  neural_branch.rs  simd_backend.rs  spiking_column.rs  ttfs_concept.rs
crates/neuromorphic-core/tests/: cortical_grid_integration.rs  lateral_inhibition_integration.rs  spiking_column_integration.rs  ttfs_similarity_integration.rs
crates/neuromorphic-wasm/: Cargo.toml
crates/neuromorphic-wasm/src/: lib.rs  simd_bindings.rs  snn_wasm.rs  ttfs_wasm.rs
crates/snn-allocation-engine/: Cargo.toml
crates/snn-allocation-engine/src/: cortical_voting.rs  lateral_inhibition.rs  lib.rs  snn_allocator.rs  ttfs_encoder.rs
crates/snn-mocks/: Cargo.toml
crates/snn-mocks/src/: lib.rs  mock_inhibition.rs  mock_simd.rs  mock_snn_column.rs  mock_ttfs_allocator.rs
crates/temporal-memory/: Cargo.toml
crates/temporal-memory/examples/: branch_manager_demo.rs
crates/temporal-memory/src/: branch.rs  consolidation.rs  lib.rs
crates/vector-search/: Cargo.toml
crates/vector-search/src/: boolean_logic.rs  lib.rs  test_utils.rs
(+3422 files in other folders)
