[package]
name = "llmkg"
version = "0.1.0"
edition = "2021"
authors = ["LLMKG Team"]
description = "Lightning-fast knowledge graph optimized for LLM integration"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "llmkg-server"
path = "src/bin/llmkg_server.rs"

[[bin]]
name = "llmkg-brain-server"
path = "src/bin/llmkg_brain_server.rs"

[[bin]]
name = "llmkg_api_server"
path = "src/bin/llmkg_api_server.rs"

[[bin]]
name = "test-brain-metrics"
path = "src/bin/test_brain_metrics.rs"

[[bin]]
name = "llmkg_mcp_server"
path = "src/bin/llmkg_mcp_server.rs"


[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ahash = "0.8"
slotmap = { version = "1.0", features = ["serde"] }
bumpalo = "3.16"
bytemuck = "1.16"

# Compression and optimization
zstd = "0.13"
bloom = "0.3"
bincode = "1.3"
bit-vec = "0.6"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy initialization
lazy_static = "1.4"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
dashmap = "5.5"

# System monitoring
sysinfo = "0.30"

# Web and monitoring dependencies
tokio-tungstenite = "0.20"
warp = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "compression"], optional = true }
axum-server = { version = "0.6", optional = true }
jsonwebtoken = "9.3"
bcrypt = "0.15"
utoipa = { version = "4.2", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "7.1", features = ["axum"], optional = true }

# Math and SIMD
num-traits = "0.2"
nalgebra = { version = "0.33", optional = true }

# AI/ML Dependencies for Real Components
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
candle-transformers = { version = "0.6", optional = true }
tokenizers = { version = "0.19", optional = true }
hf-hub = { version = "0.3", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }  # ONNX Runtime
ndarray = "0.15"
linfa = { version = "0.7", optional = true }
smartcore = { version = "0.3", optional = true }

# Embedding and similarity computation (commented out due to version conflicts)
# faiss = { version = "0.12", optional = true }
# hnswlib = { version = "0.1", optional = true }  # Currently unavailable

# Text processing and NLP
unicode-segmentation = "1.10"
whatlang = "0.16"
# lingua = { version = "1.6", optional = true }  # Commented out due to version conflicts

# LRU Cache for intelligent caching
lru = "0.12"
redis = { version = "0.24", optional = true }
flate2 = "1.0"  # For compression in L2 cache

web-sys = { version = "0.3", features = ["console", "Performance", "WorkerGlobalScope"], optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Additional dependencies needed by tests
sha2 = "0.10"
num_cpus = "1.16"

# Code analysis and monitoring dependencies
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.4"
notify = "6.1"

# Directory utilities for cache management
dirs = "5.0"

# Test infrastructure dependencies (optional)
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
handlebars = { version = "5.0", optional = true }

[dev-dependencies]
proptest = "1.5"
tokio-test = "0.4"
tempfile = "3.12"
rusqlite = { version = "0.30", features = ["bundled"] }
handlebars = "5.0"
bincode = "1.3"
dotenv = "0.15"
mockall = "0.12"
test-case = "3.3"
uuid = { version = "1.10", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
lto = true
opt-level = "s"
strip = true

[profile.release.package."*"]
opt-level = "s"

[features]
default = ["native", "api", "ai"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "console_error_panic_hook", "wee_alloc", "js-sys", "web-sys", "getrandom"]
native = ["nalgebra"]
api = ["axum", "tower", "tower-http", "axum-server", "utoipa", "utoipa-swagger-ui"]
ai = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
ai-full = ["ai", "ort", "linfa", "smartcore"]
simd = []
cuda = []
mcp = []
ai-minimal = ["redis"]

[[bench]]
name = "enhanced_storage_benchmarks"
harness = false

# Other disabled test targets

[profile.test]
opt-level = 2  # Optimize tests for better performance

