[package]
name = "neuromorphic-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local crate dependencies
neuromorphic-core = { path = "../neuromorphic-core" }
snn-allocation-engine = { path = "../snn-allocation-engine" }

# WASM dependencies
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true

# Other workspace dependencies
serde.workspace = true
serde_json.workspace = true

[target.wasm32-unknown-unknown.dependencies]
wee_alloc.workspace = true

[features]
default = []
wee_alloc = []
console_error_panic_hook = []

[dev-dependencies]
wasm-bindgen-test = "0.3"
