[package]
name = "snn-allocation-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local crate dependencies
neuromorphic-core = { path = "../neuromorphic-core" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true
once_cell.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio-test.workspace = true
