[package]
name = "snn-mocks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local crate dependencies
neuromorphic-core = { path = "../neuromorphic-core" }
snn-allocation-engine = { path = "../snn-allocation-engine" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
mockall.workspace = true

# Testing utilities
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio-test.workspace = true
