[package]
name = "temporal-memory"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Local crate dependencies
neuromorphic-core = { path = "../neuromorphic-core" }

# Workspace dependencies
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
dashmap.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio-test.workspace = true
