[package]
name = "llmkg-integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "integration_test_infrastructure"
path = "test_infrastructure/mod.rs"

[[test]]
name = "graph_storage_integration"
path = "graph_storage_integration.rs"

[[test]]
name = "embedding_graph_integration"
path = "embedding_graph_integration.rs"

[[test]]
name = "wasm_integration"
path = "wasm_integration.rs"

[[test]]
name = "mcp_integration"
path = "mcp_integration.rs"

[[test]]
name = "performance_integration"
path = "performance_integration.rs"

[dependencies]
# Core LLMKG dependencies
llmkg = { path = "../../", features = ["full"] }

# Testing framework
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random data generation
rand = "0.8"
rand_distr = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Data analysis
statistical = "1.0"

# Utilities
once_cell = "1.0"
lazy_static = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies
rayon = "1.7"
crossbeam = "0.8"

# Memory profiling (Linux/Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-specific dependencies  
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }

[features]
default = ["graph-storage", "embeddings", "performance"]

# Test categories
graph-storage = []
embeddings = ["simd", "quantization"]  
wasm = []
mcp = ["federation"]
performance = ["stress-tests"]

# Technical features
simd = []
quantization = []
federation = []
stress-tests = []

# Full feature set
full = [
    "graph-storage",
    "embeddings", 
    "wasm",
    "mcp",
    "performance",
    "simd",
    "quantization",
    "federation",
    "stress-tests"
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.12", features = ["criterion", "flamegraph"] }

[[bench]]
name = "integration_benchmarks"
harness = false
path = "benches/integration_benchmarks.rs"