[package]
name = "recommendation-engine"
version = "0.1.0"
edition = "2021"
authors = ["E-commerce Team <team@ecommerce.com>"]
description = "High-performance product recommendation microservice"
license = "MIT"
repository = "https://github.com/ecommerce/recommendation-engine"

[dependencies]
# Web framework
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async utilities
futures = "0.3"

# Mathematical operations
nalgebra = "0.32"
ndarray = "0.15"

# Configuration
config = "0.13"
dotenv = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }

# Metrics and monitoring
prometheus = "0.13"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Compression
flate2 = "1.0"

# Random number generation
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "recommendation-engine"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]